WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49450
CString(const char*) crashes when passed a null pointer
https://bugs.webkit.org/show_bug.cgi?id=49450
Summary
CString(const char*) crashes when passed a null pointer
Anders Carlsson
Reported
2010-11-12 09:53:28 PST
CString(const char*) crashes when passed a null pointer
Attachments
Patch
(1.02 KB, patch)
2010-11-12 09:54 PST
,
Anders Carlsson
aroben
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2010-11-12 09:54:50 PST
Created
attachment 73754
[details]
Patch
Anders Carlsson
Comment 2
2010-11-12 10:00:34 PST
Committed
r71923
: <
http://trac.webkit.org/changeset/71923
>
WebKit Review Bot
Comment 3
2010-11-12 12:29:22 PST
http://trac.webkit.org/changeset/71923
might have broken GTK Linux 32-bit Debug The following tests are not passing: fast/text/international/plane2.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug