CString(const char*) crashes when passed a null pointer https://bugs.webkit.org/show_bug.cgi?id=49450

Reviewed by Adam Roben.

* wtf/text/CString.cpp:
(WTF::CString::CString):
Return early if str is null.

git-svn-id: svn://svn.chromium.org/blink/trunk@71923 bbb929c8-8fbe-4397-9dbb-9b2b20218538