third_party/WebKit/JavaScriptCore/wtf/text/CString.cpp
@@ -34,6 +34,9 @@ namespace WTF {
 
 CString::CString(const char* str)
 {
+    if (!str)
+        return;
+
     init(str, strlen(str));
 }
 
